--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 FFmpeg README
 -------------
-
+//ec: this is ffmpeg-HEAD-797ef67.tar.gz 2011.3.25
+//ec: i want to learn the project and write some note on it
+//ec: and this is my comments style.
+ 
 1) Documentation
 ----------------
 
